Fixed overflowing issue.

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
 
 .theme {
   width: 100vw;
-  height: 100vh;
+  max-height: 100vh;
 }
 
 code {
